# FreeMDU

./: .gitignore  LICENSE-MIT  README.md
.github/workflows/: build.yml  ci.yml  release.yml
freemdu_board/freemdu_board/: freemdu_board.kicad_pcb  freemdu_board.kicad_prl  freemdu_board.kicad_pro  freemdu_board.kicad_sch
freemdu_board/freemdu_board/transmitter-LED/: OSRAM_SFH_7250.kicad_mod  SFH_7250.bak  SFH_7250.kicad_sym  SFH_7250.step
home/: Cargo.toml  README.md  rust-toolchain.toml
home/.cargo/: config.toml
home/src/: lib.rs
protocol/: Cargo.toml  README.md
protocol/examples/: dump_eeprom.rs  dump_memory.rs  find_keys.rs
protocol/src/: device.rs  lib.rs  serial.rs
protocol/src/device/: common.rs  id132.rs  id1998.rs  id2088.rs  id218.rs  id2895.rs  id324.rs  id360.rs  id419.rs  id469.rs  id517.rs  id605.rs  id629.rs  utils.rs
tui/: Cargo.toml  README.md
tui/src/: bar.rs  main.rs  popup.rs  session.rs  table.rs  worker.rs
